js/js.translator/testData/incremental/invalidationWithPL/interfaceBecomeClass/main/m.kt
fun box(stepId: Int): String {
    konst x = test()
    if (stepId != x) return "Fail; got $x"
    return "OK"
}
